--- a/style.css
+++ b/style.css
@@ -4,9 +4,13 @@
   box-sizing: border-box;
 }
 
+a {
+  cursor: pointer;
+}
+
 #main {
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   transition: all 0.3s;
   height: 100vh;
